# voxtral-tts-mlx

./: .env.example  .gitignore  AGENTS.md  README.md  VOICE_SYNTHESIS_GUIDE.md  api_shared.py  main.py  pyproject.toml  request_normalizer.py  server.py  server_chatterbox.py  server_higgs.py  server_kugelaudio.py  server_moss.py  server_omnivoice.py  server_vibevoice.py  server_vibevoice_7b_coreml.py  server_vibevoice_mlx_base.py  server_voxtral.py  test-fish-audio.sh
.github/workflows/: macos-ci.yml
documentation/kugelaudio/: VOICE_SYNTHESIS_GUIDE.md  encode_voices_kugelaudio.py  synthesize_with_voice.py
scripts/: diagnose_vibevoice_noise.py  generate_backend_audio_samples.py  install-chatterbox.sh  install-mac.sh  preprocess_voice_refs.py  synthesize_with_voice.py
src/: api_shared.py  mlx_utils.py  server_chatterbox.py  server_higgs.py  server_kugelaudio.py  server_mlx_audio.py  server_moss.py  server_omnivoice.py  server_vibevoice_15b_coreml.py  server_vibevoice_15b_no_coreml.py  server_vibevoice_7b_coreml.py  server_vibevoice_7b_no_coreml.py  server_vibevoice_mlx_base.py  server_voxtral.py  vibevoice_community_runner.py
src/vibevoice_mlx/: e2e_pipeline.py
voices/: anouk.pt  bart.pt  bart2.pt  carolien.pt  chantal.pt  clara.pt  daan.pt  esther.pt  floor.pt  jasper.pt  jeroen.pt  julia.pt  laura.pt  linda.pt  marcel.pt  mark.pt  merel.pt  mirjam.pt  nl_female.pt  paul.pt  roos.pt  saskia.pt  sophia.pt  susan.pt  tineke.pt
