[project]
name = "voxtral-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "faster-whisper>=1.1.1",
    "mistral-common[audio]>=1.8.0",
    "mlx-audio>=0.3.0",
    "numpy>=1.24.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "soundfile>=0.12.0",
    "uvicorn>=0.49.0",
]
