[project]
name = "voxtral-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.2",
    "faster-whisper>=1.2.1",
    "pyrubberband>=0.3",
    "mistral-common[audio]>=1.11.5",
    "mlx-audio>=0.4.4",
    "numpy>=2.5.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "soundfile>=0.14.0",
    "uvicorn>=0.49.0",
]
