[project]
name = "voxtral-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.2",
    "faster-whisper>=1.2.1",
    "pyrubberband>=0.3",
    "mistral-common[audio]>=1.11.5",
    "mlx-audio>=0.4.4",
    "numpy>=2.5.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "soundfile>=0.14.0",
    "uvicorn>=0.49.0",
    "torch>=2.13.0",
]

[project.scripts]
tts = "main:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main",
    "api_shared",
    "request_normalizer",
    "server",
    "server_voxtral",
    "server_chatterbox",
    "server_mlx_audio",
    "server_omnivoice",
    "server_kugelaudio",
    "server_higgs",
    "server_moss",
    "server_vibevoice",
    "server_vibevoice_mlx_base",
    "server_vibevoice_15b_coreml",
    "server_vibevoice_15b_no_coreml",
    "server_vibevoice_7b_coreml",
    "server_vibevoice_7b_no_coreml",
]
